Few-shot evaluations + first API methods

--- a/configs/model_configs/GoLLIE-Llama-3.1-8B-chat_2gpus.yaml
+++ b/configs/model_configs/GoLLIE-Llama-3.1-8B-chat_2gpus.yaml
@@ -31,7 +31,7 @@ validation_tasks:
 test_tasks:
   - ace05.eae
   - ace05.ner
-  - ace05.re
+  - ace05.rc
   - ace05.ver
   - bc5cdr.ner
   - conll03.ner
