--- a/configs/model_configs/eval/GoLLIE-Llama-3.1-8B-chat.yaml
+++ b/configs/model_configs/eval/GoLLIE-Llama-3.1-8B-chat.yaml
@@ -1,5 +1,6 @@
 #Training args
 model_name_or_path: meta-llama/Meta-Llama-3.1-8B-Instruct
+lora_weights_name_or_path: /ikerlariak/osainz006/models/GoLLIE/GoLLIE-Llama-3.1-8B-chat
 torch_dtype: bfloat16
 use_lora: true
 quantization: 4
@@ -8,7 +9,7 @@ bf16_full_eval: true
 gradient_checkpointing: true
 force_auto_device_map: false
 use_flash_attention: true
-deepspeed: configs/deepspeed_configs/deepspeed_zero2.json
+# deepspeed: configs/deepspeed_configs/deepspeed_zero2.json
 use_chat_format: true
 
 # dataset arguments
@@ -73,8 +74,8 @@ save_steps: 1000
 save_total_limit: 999
 
 # evaluation
-do_train: true
-do_eval: true
+do_train: false
+do_eval: false
 do_predict: true
 evaluation_strategy: "epoch"
 eval_steps: 500
