--- a/configs/model_configs/eval/GoLLIE-Llama-3.1-8B-chat_2gpus.yaml
+++ b/configs/model_configs/eval/GoLLIE-Llama-3.1-8B-chat_2gpus.yaml
@@ -1,14 +1,13 @@
 #Training args
 model_name_or_path: meta-llama/Meta-Llama-3.1-8B-Instruct
+lora_weights_name_or_path: /ikerlariak/osainz006/models/GoLLIE/GoLLIE-Llama-3.1-8B-chat_biggerbs
 torch_dtype: bfloat16
 use_lora: true
-quantization: 4
-quantization_inference: null
-bf16_full_eval: true
+quantization: null
 gradient_checkpointing: true
 force_auto_device_map: false
 use_flash_attention: true
-deepspeed: configs/deepspeed_configs/deepspeed_zero2.json
+# deepspeed: configs/deepspeed_configs/deepspeed_zero3.json
 use_chat_format: true
 
 # dataset arguments
@@ -65,7 +64,7 @@ ignore_pad_token_for_loss: true
 prompt_loss_weight: 0.0
 
 # checkpoint settings
-output_dir: /ikerlariak/osainz006/models/GoLLIE/GoLLIE-Llama-3.1-8B-chat
+output_dir: /ikerlariak/osainz006/models/GoLLIE/GoLLIE-Llama-3.1-8B-chat_biggerbs
 overwrite_output_dir: true
 load_best_model_at_end: false
 save_strategy: "epoch"
@@ -73,8 +72,8 @@ save_steps: 1000
 save_total_limit: 999
 
 # evaluation
-do_train: true
-do_eval: true
+do_train: false
+do_eval: false
 do_predict: true
 evaluation_strategy: "epoch"
 eval_steps: 500
@@ -83,9 +82,9 @@ predict_with_generate: true
 evaluate_all_checkpoints: true
 
 # batch size
-per_device_train_batch_size: 2
+per_device_train_batch_size: 4
 per_device_eval_batch_size: 8
-gradient_accumulation_steps: 64
+gradient_accumulation_steps: 16 # With 2 GPUs
 generation_num_beams: 1
 
 # optimizer settings
