--- a/configs/data_configs/chat/casie_config_end2end.json
+++ b/configs/data_configs/chat/casie_config_end2end.json
@@ -5,8 +5,10 @@
     ],
     "dataloader_cls": "src.tasks.casie.data_loader.CASIEDatasetLoader",
     "sampler_cls": "src.tasks.casie.data_loader.CASIESampler",
+    "train_file": "data/casie/data.train.jsonl",
     "dev_file": "data/casie/data.dev.jsonl",
     "test_file": "data/casie/data.test.jsonl",
+    "few-shot_examples_from": "data/casie/data.train.jsonl",
     "prompt_template": "templates/user_prompt.j2",
     "parallel_instances": 15,
     "use_chat_format": true,
