--- a/configs/data_configs/chat/crossner_science_config.json
+++ b/configs/data_configs/chat/crossner_science_config.json
@@ -6,6 +6,7 @@
     "train_file": "data/CrossNer/science/train.txt",
     "dev_file": "data/CrossNer/science/dev.txt",
     "test_file": "data/CrossNer/science/test.txt",
+    "few-shot_examples_from": "data/CrossNer/science/train.txt",
     "prompt_template": "templates/user_prompt.j2",
     "parallel_instances": 15,
     "use_chat_format": true,
